# mcp_gmail

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  local_auth.py  pyproject.toml
config/: categories.yaml
src/mcp_gmail/: __init__.py  api.py  auth.py  combined_server.py  config.py  gmail_client.py  models.py  server.py  server_old.py  sse_server.py
tests/: test_config.py  test_models.py
